Add example of using S3 bucket with sandbox

--- a/s3-filesystem/.env.example
+++ b/s3-filesystem/.env.example
@@ -1,4 +1,10 @@
 # Get your API key here https://e2b.dev/docs/getting-started/api-key
 E2B_API_KEY=""
 
+# OpenAI
 OPENAI_API_KEY=""
+
+# AWS
+S3_BUCKET_NAME="<bucket-name>"
+AWS_ACCESS_KEY_ID="<aws-access-key-id>"
+AWS_SECRET_ACCESS_KEY="<aws-secret-access-key>"
