--- a/stream-output/server/pyproject.toml
+++ b/stream-output/server/pyproject.toml
@@ -7,12 +7,11 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.11"
-e2b = "^0.13.13"
 fastapi = "^0.104.1"
 uvicorn = "^0.24.0.post1"
 websockets = "^12.0"
 python-dotenv = "^1.0.0"
-
+e2b = "^0.13.15"
 
 [build-system]
 requires = ["poetry-core"]
@@ -20,3 +19,4 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.scripts]
 start = "server.main:main"
+test = "server.test:main"
