--- a/stream-output/server/.env.example
+++ b/stream-output/server/.env.example
@@ -1,2 +1,6 @@
 # Get your API key here https://e2b.dev/docs/getting-started/api-key
 E2B_API_KEY=
+
+# Used for saving sandbox's output to a database
+# For example "postgresql://postgres:postgres@localhost:5432/postgres"
+POSTGRESQL_URL=
